docs/i18n/nl/docusaurus-plugin-content-docs/version-1.4/shortcuts.md
---
title: "Snelkoppelingen"
sidebar_position: 2
---

Er zijn een paar snelkoppelingen die je in de editor kunt gebruiken. Sommige ervan worden onder de knoppen geschreven.

## Algemeen

* `Ctrl` + `N`: Nieuw bestand
* `Ctrl` + `Shift` + `N`: Nieuw bestand van sjabloon
* `Ctrl` + `O`: Bestand openen
* `Ctrl` + `I`: Bestand importeren
* `Ctrl` + `E`: Bestand exporteren
* `Ctrl` + `Shift` + `E`: Bestand als afbeelding exporteren
* `Ctrl` + `Alt` + `E`: Bestand als svg exporteren
* `Ctrl` + `Alt` + `S`: Instellingen openen

## Project

* `Ctrl` + `Z`: Ongedaan maken
* `Ctrl` + `Y`: Opnieuw
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Open projectinstellingen
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Open kleurenpalet venster
* `Ctrl` + `B`: Open achtergronddialoog
* `Ctrl` + `Shift` + `A`: Open gebieden dialoog
* `Ctrl` + `L`: Open lagen dialoogvenster
* `Ctrl` + `S`: Opslaan
* `ALT` + `S`: pad wijzigen

## Stylus

* `Primaire knop`: Wijzig naar handgereedschap
* `Secundaire knop`: Wijzigen naar tweede schilder
